--- a/BackendProject/Views/_ViewImports.cshtml
+++ b/BackendProject/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using BackendProject
-@using BackendProject.Models
+@*@using BackendProject.Models*@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
