--- a/BackendProject/Views/Home/Index.cshtml
+++ b/BackendProject/Views/Home/Index.cshtml
@@ -352,13 +352,14 @@
                 <div class="col-md-8 col-md-offset-2 col-sm-12">
                     <div class="single-testimonial">
                         <div class="testimonial-info">
+
                             <div class="testimonial-img">
-                                <img src="img/testimonial/testimonial.jpg" alt="testimonial">
+                                <img src="img/testimonial/@Model.Student.ImageUrl" alt="testimonial">
                             </div>
                             <div class="testimonial-content">
-                                <p>I must explain to you how all this mistaken idea of denoung pleure and praising pain was born and I will give you a coete account of the system, and expound the actual</p>
-                                <h4>David Morgan</h4>
-                                <h5>Student, CSE</h5>
+                                <p>@Model.Student.Title</p>
+                                <h4>@Model.Student.Name</h4>
+                                <h5>@Model.Student.About</h5>
                             </div>
                         </div>
                     </div>
