--- a/BackendProject/Views/Shared/Components/Header/Default.cshtml
+++ b/BackendProject/Views/Shared/Components/Header/Default.cshtml
@@ -25,7 +25,7 @@
                                             <li><a href="index-5.html">Home Five</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a asp-action="index" asp-controller="about">About</a></li>
                                     <li>
                                         <a href="course.html">courses</a>
                                         <ul>
