--- a/BackendProject/Views/Home/Index.cshtml
+++ b/BackendProject/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model HomeVM
+﻿@model HomeVM
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -115,7 +114,7 @@
                         <a class="default-btn" href="course-details.html">view courses</a>
                     </div>
                 }
-               
+
             </div>
         </div>
     </div>
@@ -133,29 +132,36 @@
             </div>
         </div>
         <div class="row">
-           
 
 
+            @foreach (var item in Model.Courses)
+            {
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="single-course">
                         <div class="course-img">
                             <a href="course-details.html">
-                                <img src="img/course/course1.jpg" alt="course">
+                                <img src="img/course/@item.ImageUrl" alt="course">
                                 <div class="course-hover">
                                     <i class="fa fa-link"></i>
                                 </div>
                             </a>
                         </div>
                         <div class="course-content">
-                            <h3><a href="course-details.html">CSE ENGINEERING</a></h3>
+                            <h3><a href="course-details.html">@item.Name</a></h3>
                             <p>I must explain to you how all this a mistaken idea of denouncing great explorer of the rut the is lder of human happiness</p>
                             <a class="default-btn" href="course-details.html">read more</a>
                         </div>
                     </div>
-                </div>  
-            
-           
-           
+                </div>
+            }
+
+
+
+
+
+
+
+
         </div>
     </div>
 </div>
