--- a/BackendProject/Views/Shared/Components/Header/Default.cshtml
+++ b/BackendProject/Views/Shared/Components/Header/Default.cshtml
@@ -30,13 +30,13 @@
                                         <a href="course.html">courses</a>
                                         <ul>
                                             <li><a href="course.html">courses</a></li>
-                                            <li><a href="course-details.html">courses details</a></li>
+                                            <li><a asp-action="index" asp-controller="courses details">courses details</a></li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="event.html">event</a>
+                                        <a a asp-controller="event" asp-action="index">event</a>
                                         <ul>
-                                            <li><a href="event.html">event</a></li>
+                                            <li><a asp-controller="event" asp-action="index">event</a></li>
                                             <li><a href="event-left-side-bar.html">event left sidebar</a></li>
                                             <li><a href="event-right-side-bar.html">event right sidebar</a></li>
                                             <li><a href="event-details.html">event details</a></li>
