--- a/BackendProject/Views/Shared/Components/Header/Default.cshtml
+++ b/BackendProject/Views/Shared/Components/Header/Default.cshtml
@@ -50,9 +50,9 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="blog.html">blog</a>
+                                        <a asp-action="index" asp-controller="blog" >blog</a>     
                                         <ul>
-                                            <li><a href="blog.html">blog</a></li>
+                                            <li><a as>blog</a></li>
                                             <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
                                             <li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
                                             <li><a href="blog-details.html">blog details</a></li>
