--- a/BackendProject/Views/About/Detail.cshtml
+++ b/BackendProject/Views/About/Detail.cshtml
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-5 col-xs-12">
                         <div  class="teacher-details-img">
-                    <img src="img/teacher/" alt="teacher">
+                    <img src="~/img/teacher/@Model." alt="teacher">
                 </div>
                     </div>
                     <div class="col-md-7 col-sm-7 col-xs-12">
