--- a/BackendProject/Views/Event/Detail.cshtml
+++ b/BackendProject/Views/Event/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EventVM
 @{
     ViewData["Title"] = "Detail";
-    Layout = "~/Views/Shared/_SecondLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
    
 }
 <!-- Header Area Start -->
