--- a/BackendProject/Areas/AdminArea/Views/Slider/Edit.cshtml
+++ b/BackendProject/Areas/AdminArea/Views/Slider/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Slider
+﻿@model SliderUpdateVM
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Areas/AdminArea/Views/Shared/_AdminLayout.cshtml";
