--- a/BackendProject/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Views/Shared/_Layout.cshtml
@@ -221,6 +221,8 @@
     <script src="~/js/jquery.nicescroll.min.js"></script>
     <script src="~/js/plugins.js"></script>
     <script src="~/js/main.js"></script>
+    @RenderSection("Scripts", required:false);
+    @RenderSection("Css",required:false);
 </body>
 
 <!-- Mirrored from demo.devitems.com/eduhome/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 21 Jun 2020 19:41:25 GMT -->
