--- a/BackendProject/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Views/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="header-top-right text-right">
                             <ul>
-                                <li><a href="login.html">login</a></li>
-                                <li><a href="signup.html">signup</a></li>
+                                <li><a asp-action="login" asp-controller="account">login</a></li>
+                                <li><a asp-action="register" asp-controller="account">signup</a></li>
                             </ul>
                         </div>
                     </div>
